# ai_coding_helper

./: .gitignore  README.md  start_backend.bat  start_frontend.bat
backend/: .env.example  main.py  pyproject.toml
backend/api/: auth.py  chat.py  rag.py  user.py
backend/core/: config.py  logger.py  security.py
backend/db/: database.py
backend/models/: __init__.py  memory.py  rag.py  user.py
backend/schemas/: schema.py
backend/services/: __init__.py  anthropic_service.py  bge_service.py  chit_chat_detector.py  cross_encoder_service.py  memory_service.py  qdrant_service.py  rag_service.py  tool_service.py
backend/src/ai_coding_backend/: __init__.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/api/: auth.js  chat.js  rag.js
frontend/src/components/: FileItem.vue  RAGPanel.vue
frontend/src/store/: auth.js  dragStore.js
frontend/src/views/: Chat.vue  Login.vue  ProjectSelector.vue  Register.vue
