[project]
name = "ai_file_processing_backend"
version = "0.1.0"
description = "AI文件网站后端"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    "pydantic-settings>=2.1.0",
    "sqlalchemy>=2.0.25",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "anthropic>=0.18.0",
    "python-dotenv>=1.0.0",
    "email-validator>=2.3.0",
    "pymysql>=1.1.2",
    "qdrant-client>=1.7.0",
    "jieba>=0.42.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["**/*.py", "**/*.env", "**/*.md"]
packages = ["."]

[project.scripts]
ai_file_processing_backend = "main:app"
